# stm32-template

./: .gitignore  CMakeLists.txt  Makefile  config.cmake  standalone.mk
cmake/libs/: common.cmake  freertos.cmake  libopencm3.cmake
cmake/toolchains/: freertos.cmake  gcc.cmake  stm32.cmake  stm32f303k8-freertos.cmake  stm32f303k8.cmake
lib/: libopencm3.mk
mk/: freertos.mk  rules.mk  toolchain.mk
src/: FreeRTOSConfig.h  main.c
src/hardware/: gpio.c  gpio.h  rcc.c  rcc.h  systick.c
